<resources>
    <string name="app_name">TeoStorage</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="go_left">Go left</string>
    <string name="go_right">Go right</string>
    <string name="txt_ini">...</string>
    <string name="tipo_de_storage">Tipo de storage</string>
    <string name="button_1">Button 1</string>
    <string name="button_2">Button 2</string>
</resources>