<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4c394f"
    android:padding="16dp"
    tools:context=".StorageMainActivity">

    <FrameLayout
        android:id="@+id/frStorageFragments"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/vpStorageFragments"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fbLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|top"
            android:src="@android:drawable/ic_media_previous"
            app:backgroundTint="#bcb8ce"
            app:elevation="4dp"
            android:contentDescription="@string/go_left" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fbRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|top"
            android:src="@android:drawable/ic_media_next"
            app:backgroundTint="#bcb8ce"
            app:elevation="4dp"
            android:contentDescription="@string/go_right" />
    </FrameLayout>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:background="#d5ddef"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frStorageFragments">

        <TextView
            android:typeface="monospace"
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#d5ddef"
            android:text="@string/txt_ini"
            android:textColor="#4c394f"
            android:textSize="16sp" />
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>